# rmp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile-shaders-win.bat  run.bat
cmake/: FindEASTL.cmake  utils.cmake
project/proj.vs_2022/: rmp.sln
project/proj.vs_2022/rmp/: rmp.vcxproj  rmp.vcxproj.filters
src/: app.cpp  app.h  defs.h  entity.cpp  entity.h  main.cpp
src/base/application/: app.cpp  app.h
src/base/filesystem/: filesystem.cpp  filesystem.h
src/base/input/: input_device.h  input_state.h  input_system.cpp  input_system.h
src/base/input/input_devices/: input_device_keyboard_mouse.cpp  input_device_keyboard_mouse.h
src/base/input/input_states/: input_state_keyboard.h  input_state_mouse.h
src/base/logging/: log.cpp  log.h
src/base/math/: math.h
src/base/memory/: memory.cpp  memory.h  ptrs.h
src/base/render/: render_device.cpp  render_device.h  renderer.cpp  renderer.h
src/base/time/: time.cpp  time.h  time_stamp.cpp  time_stamp.h  timers.h
src/base/types/: array.h  eastl_defs.cpp  eastl_defs.h  string.h
src/engine/: engine.cpp  engine.h  update_context.h
src/rmp/: test.cpp  test.hpp
src/standalone/: main.cpp
